<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">


        <Button
            android:id="@+id/button2"
            style="@style/ButtonSktl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/text_button2" />

        <Button
            android:id="@+id/button5"
            style="@style/ButtonSktl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_button5" />

        <Button
            android:id="@+id/button6"
            style="@style/ButtonSktl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_button6" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image_view3"
        style="@style/ImageSktl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/image3"
        android:layout_weight="1" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view1"
        style="@style/TextSktl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_view1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/button22"
            style="@style/ButtonSktl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text_button2" />

        <Button
            android:id="@+id/button3"
            style="@style/ButtonSktl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_button3and11" />


    </LinearLayout>


</LinearLayout>
