<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
        >

    <ImageView
    android:id="@+id/image_view3"
    style="@style/ImageSktl"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:src="@drawable/image3" />

    <TextView
        android:id="@+id/text_view3"
        style="@style/TextSktl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_view3" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/button88"
            style="@style/ButtonSktl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/text_button9"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/button12"
            style="@style/ButtonSktl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_button12" />


    </LinearLayout>

</LinearLayout>